2008-08-02  Marek Safar  <marek.safar@gmail.com>

	* Type.cs: Removed _MemberInfo from base classes list.
	
2008-07-28  Marek Safar  <marek.safar@gmail.com>

	* KnownTerminals.cs: Don't initialize rarely used static data.

2008-07-24  Zoltan Varga  <vargaz@gmail.com>

	* Delegate.cs: Move the rarely used fields to a separate object, add
	'method_code' field.

	* Environment.cs: Bump corlib version.

	* ConsoleDriver.cs: Remove unused Suspend icall.

2008-07-21  Marek Safar  <marek.safar@gmail.com>

	* AppDomain.cs (Load): Check for 0-length assembly name.

2008-07-21  Rodrigo Kumpera  <rkumpera@novell.com>

	* Enum.cs (GetHashCode): Use new icall get_hashcode to
	avoid allocating a boxed version of the enum basetype.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	* String.cs: reverted GetHashCode changes.

2008-07-08  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Char.cs: Remove obsolete lamespecs (it implements IConvertible, small formatting)

2008-07-08  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Char.cs: Optimize some Is* checks

2008-07-06  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* DateTimeOffset.cs: Fix parameter name

2008-07-06  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* DateTimeOffset.cs: Remove public, make implicit method

2008-07-06  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Environment.cs: Add missing attribute

2008-07-04  Rodrigo Kumpera  <rkumpera@novell.com>

	* Delegate.cs (get_Method): Use the internal version
	of GetMethodFromHandle to avoid the generic class check.

2008-07-04  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* GCCollectionMode.cs: Add attribute
	* GC.cs: Add semi-stubbed missing method, remove obsolete Lamespec, hide non-public method

2008-07-04  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Delegate.cs: Fix parameter names for 2.0 profile
	* Int64.cs: Fix parameter names

2008-07-04  Andreas Nahr <ClassDevelopment@A-SoftTech.com>
